--- a/app/src/main/res/drawable/circle_super.xml
+++ b/app/src/main/res/drawable/circle_super.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/orange" />
+    <solid android:color="@color/green" />
 
     <padding
         android:bottom="14dp"
