--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#777777</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF5722</color>
     <color name="orange_85">#D9FF5722</color>
